test-package-compiler/src/snapshots/test_package_compiler__generated_tests__src_importing_dev.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/src_importing_dev"
---
error: App importing dev module
  ┌─ src/one.gleam:3:1
  │
3 │ import two
  │ ^ Imported here

The application module `one` is importing the dev module `two`.

Dev modules are not included in production builds so application modules
cannot import them. Perhaps move the `two` module to the src directory.
